--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     <span><i class="fa fa-map-marker-alt" style="margin-right:6px;color:var(--gold2)"></i>Guatemala, Guatemala</span>
     <div class="tb-right">
       <span><i class="fa fa-phone" style="margin-right:5px;color:var(--gold2)"></i><a href="tel:+50235200000">+(502) 3520-0000</a></span>
-      <span><i class="fa fa-envelope" style="margin-right:5px;color:var(--gold2)"></i><a href="mailto:info@contachapin.com">info@contachapin.com</a></span>
+      <span><i class="fa fa-envelope" style="margin-right:5px;color:var(--gold2)"></i><a href="mailto:esosa@contachapin.com">info@contachapin.com</a></span>
     </div>
   </div>
 
@@ -278,7 +278,7 @@
       <div class="contact-grid">
         <div class="contact-info-list">
           <div class="contact-item"><div class="contact-icon"><i class="fa fa-phone"></i></div><div><div class="contact-label">Telefono</div><div class="contact-val"><a href="tel:+50235200000">+(502) 3520-0000</a></div></div></div>
-          <div class="contact-item"><div class="contact-icon"><i class="fa fa-envelope"></i></div><div><div class="contact-label">Correo</div><div class="contact-val"><a href="mailto:info@contachapin.com">info@contachapin.com</a></div></div></div>
+          <div class="contact-item"><div class="contact-icon"><i class="fa fa-envelope"></i></div><div><div class="contact-label">Correo</div><div class="contact-val"><a href="mailto:esosa@contachapin.com">info@contachapin.com</a></div></div></div>
           <div class="contact-item"><div class="contact-icon"><i class="fab fa-whatsapp"></i></div><div><div class="contact-label">WhatsApp</div><div class="contact-val"><a href="https://wa.me/50235200000">+(502) 3520-0000</a></div></div></div>
           <div class="contact-item"><div class="contact-icon"><i class="fa fa-map-marker-alt"></i></div><div><div class="contact-label">Ubicacion</div><div class="contact-val" style="color:rgba(255,255,255,.8)">Guatemala, Guatemala</div></div></div>
           <div class="contact-item"><div class="contact-icon"><i class="fa fa-clock"></i></div><div><div class="contact-label">Horario</div><div class="contact-val" style="color:rgba(255,255,255,.8)">Lun-Vie: 8:00-17:00 hrs</div></div></div>
@@ -324,7 +324,7 @@
           <a href="#" class="social-btn"><i class="fab fa-facebook-f"></i></a>
           <a href="#" class="social-btn"><i class="fab fa-linkedin-in"></i></a>
           <a href="https://wa.me/50235200000" class="social-btn"><i class="fab fa-whatsapp"></i></a>
-          <a href="mailto:info@contachapin.com" class="social-btn"><i class="fa fa-envelope"></i></a>
+          <a href="mailto:esosa@contachapin.com" class="social-btn"><i class="fa fa-envelope"></i></a>
         </div>
       </div>
       <div class="footer-col">
@@ -344,13 +344,13 @@
           <li><a href="#nosotros">Sobre Nosotros</a></li>
           <li><a href="#proceso">Nuestro Proceso</a></li>
           <li><a href="#contacto">Contacto</a></li>
-          <li><a href="/web/login">Portal del Cliente (Odoo)</a></li>
+          <li><a href="https://contachapin.com/web/login">Portal del Cliente (Odoo)</a></li>
         </ul>
       </div>
     </div>
     <div class="footer-bottom">
       <p>2025 ContaChapin - Ericson H. Sosa. Todos los derechos reservados.</p>
-      <p>Guatemala - <a href="/web/login">Acceso a Odoo</a></p>
+      <p>Guatemala - <a href="https://contachapin.com/web/login">Acceso a Odoo</a></p>
     </div>
   </footer>
 
