--- a/index.html
+++ b/index.html
@@ -321,8 +321,8 @@
         </div>
         <p>Mas de 20 anos brindando soluciones contables con excelencia, etica y compromiso en Guatemala.</p>
         <div class="footer-socials">
-          <a href="#" class="social-btn"><i class="fab fa-facebook-f"></i></a>
-          <a href="#" class="social-btn"><i class="fab fa-linkedin-in"></i></a>
+          <a href="https://www.facebook.com/contachapin/" class="social-btn"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://www.instagram.com/contachapin/?hl=es" class="social-btn"><i class="fab fa-instagram"></i></a>
           <a href="https://wa.me/50235200000" class="social-btn"><i class="fab fa-whatsapp"></i></a>
           <a href="mailto:esosa@contachapin.com" class="social-btn"><i class="fa fa-envelope"></i></a>
         </div>
