--- a/index.html
+++ b/index.html
@@ -165,10 +165,10 @@
       <div class="nav-logo-text">ContaChapin<span>Servicios Contables</span></div>
     </a>
     <ul class="nav-links" id="navLinks">
-      <li><a href="#servicios">Servicios</a></li>
-      <li><a href="#nosotros">Nosotros</a></li>
-      <li><a href="#proceso">Proceso</a></li>
-      <li><a href="#contacto" class="nav-cta">Contactenos</a></li>
+      <li><a href="">Servicios</a></li>
+      <li><a href="">Nosotros</a></li>
+      <li><a href="">Proceso</a></li>
+      <li><a href="" class="nav-cta">Contactenos</a></li>
     </ul>
     <button class="nav-toggle" id="navToggle"><i class="fa fa-bars" id="toggleIcon"></i></button>
   </nav>
@@ -181,8 +181,8 @@
         <h1 class="fade-up d1">Su <span class="accent">patrimonio financiero</span><br>en manos expertas</h1>
         <p class="hero-sub fade-up d2">Ericson H. Sosa pone mas de 20 anos de experiencia contable a su servicio. Soluciones personalizadas, transparentes y confiables para empresas y personas en Guatemala.</p>
         <div class="hero-actions fade-up d3">
-          <a href="#contacto" class="btn-primary"><i class="fa fa-paper-plane"></i> Solicitar Consulta</a>
-          <a href="#servicios" class="btn-outline"><i class="fa fa-list"></i> Ver Servicios</a>
+          <a href="" class="btn-primary"><i class="fa fa-paper-plane"></i> Solicitar Consulta</a>
+          <a href="" class="btn-outline"><i class="fa fa-list"></i> Ver Servicios</a>
         </div>
         <div class="hero-stats fade-up d4">
           <div class="hero-stat"><div class="num">20+</div><div class="lbl">Anos de Exp.</div></div>
@@ -206,7 +206,7 @@
             <li><i class="fa fa-phone"></i>+(502) 3520-0000</li>
             <li><i class="fa fa-envelope"></i>info@contachapin.com</li>
           </ul>
-          <a href="#contacto" class="card-cta">Agendar Cita Gratuita <i class="fa fa-arrow-right" style="margin-left:6px"></i></a>
+          <a href="" class="card-cta">Agendar Cita Gratuita <i class="fa fa-arrow-right" style="margin-left:6px"></i></a>
         </div>
       </div>
     </div>
@@ -330,20 +330,20 @@
       <div class="footer-col">
         <h5>Servicios</h5>
         <ul>
-          <li><a href="#servicios">Contabilidad General</a></li>
-          <li><a href="#servicios">Auditoria Financiera</a></li>
-          <li><a href="#servicios">Asesoria Fiscal</a></li>
-          <li><a href="#servicios">Analisis Financiero</a></li>
-          <li><a href="#servicios">Nomina y RRHH</a></li>
-          <li><a href="#servicios">Contabilidad Digital</a></li>
+          <li><a href="">Contabilidad General</a></li>
+          <li><a href="">Auditoria Financiera</a></li>
+          <li><a href="">Asesoria Fiscal</a></li>
+          <li><a href="">Analisis Financiero</a></li>
+          <li><a href="">Nomina y RRHH</a></li>
+          <li><a href="">Contabilidad Digital</a></li>
         </ul>
       </div>
       <div class="footer-col">
         <h5>Empresa</h5>
         <ul>
-          <li><a href="#nosotros">Sobre Nosotros</a></li>
-          <li><a href="#proceso">Nuestro Proceso</a></li>
-          <li><a href="#contacto">Contacto</a></li>
+          <li><a href="">Sobre Nosotros</a></li>
+          <li><a href="">Nuestro Proceso</a></li>
+          <li><a href="">Contacto</a></li>
           <li><a href="https://contachapin.com/web/login">Portal del Cliente (Odoo)</a></li>
         </ul>
       </div>
