--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
         <h5>Empresa</h5>
         <ul>
           <li><a href="">Sobre Nosotros</a></li>
-          <li><a href="">Nuestro Proceso</a></li>
+          <li><a href="#">Nuestro Proceso</a></li>
           <li><a href="">Contacto</a></li>
           <li><a href="https://contachapin.com/web/login">Portal del Cliente (Odoo)</a></li>
         </ul>
