--- a/index.html
+++ b/index.html
@@ -330,20 +330,20 @@
       <div class="footer-col">
         <h5>Servicios</h5>
         <ul>
-          <li><a href="">Contabilidad General</a></li>
-          <li><a href="">Auditoria Financiera</a></li>
-          <li><a href="">Asesoria Fiscal</a></li>
-          <li><a href="">Analisis Financiero</a></li>
-          <li><a href="">Nomina y RRHH</a></li>
-          <li><a href="">Contabilidad Digital</a></li>
+          <li><a href="#">Contabilidad General</a></li>
+          <li><a href="#">Auditoria Financiera</a></li>
+          <li><a href="#">Asesoria Fiscal</a></li>
+          <li><a href="#">Analisis Financiero</a></li>
+          <li><a href="#">Nomina y RRHH</a></li>
+          <li><a href="#">Contabilidad Digital</a></li>
         </ul>
       </div>
       <div class="footer-col">
         <h5>Empresa</h5>
         <ul>
-          <li><a href="">Sobre Nosotros</a></li>
+          <li><a href="#">Sobre Nosotros</a></li>
           <li><a href="#">Nuestro Proceso</a></li>
-          <li><a href="">Contacto</a></li>
+          <li><a href="#">Contacto</a></li>
           <li><a href="https://contachapin.com/web/login">Portal del Cliente (Odoo)</a></li>
         </ul>
       </div>
