--- a/index.html
+++ b/index.html
@@ -165,10 +165,10 @@
       <div class="nav-logo-text">ContaChapin<span>Servicios Contables</span></div>
     </a>
     <ul class="nav-links" id="navLinks">
-      <li><a href="">Servicios</a></li>
-      <li><a href="">Nosotros</a></li>
-      <li><a href="">Proceso</a></li>
-      <li><a href="" class="nav-cta">Contactenos</a></li>
+      <li><a href="#servicios">Servicios</a></li>
+      <li><a href="#nosotros">Nosotros</a></li>
+      <li><a href="#proceso">Proceso</a></li>
+      <li><a href="#contacto" class="nav-cta">Contactenos</a></li>
     </ul>
     <button class="nav-toggle" id="navToggle"><i class="fa fa-bars" id="toggleIcon"></i></button>
   </nav>
@@ -201,7 +201,7 @@
           <div class="title-label">Contador Certificado</div>
           <ul class="card-info-list">
             <li><i class="fa fa-graduation-cap"></i>Contador Certificado</li>
-            <li><i class="fa fa-briefcase"></i>+20 anos de experiencia</li>
+            <li><i class="fa fa-briefcase"></i>+20 años de experiencia</li>
             <li><i class="fa fa-map-marker-alt"></i>Guatemala, Guatemala</li>
             <li><i class="fa fa-phone"></i>+(502) 3520-0000</li>
             <li><i class="fa fa-envelope"></i>info@contachapin.com</li>
@@ -330,20 +330,20 @@
       <div class="footer-col">
         <h5>Servicios</h5>
         <ul>
-          <li><a href="#">Contabilidad General</a></li>
-          <li><a href="#">Auditoria Financiera</a></li>
-          <li><a href="#">Asesoria Fiscal</a></li>
-          <li><a href="#">Analisis Financiero</a></li>
-          <li><a href="#">Nomina y RRHH</a></li>
-          <li><a href="#">Contabilidad Digital</a></li>
+          <li><a href="#servicios">Contabilidad General</a></li>
+          <li><a href="#servicios">Auditoria Financiera</a></li>
+          <li><a href="#servicios">Asesoria Fiscal</a></li>
+          <li><a href="#servicios">Analisis Financiero</a></li>
+          <li><a href="#servicios">Nomina y RRHH</a></li>
+          <li><a href="#servicios">Contabilidad Digital</a></li>
         </ul>
       </div>
       <div class="footer-col">
         <h5>Empresa</h5>
         <ul>
-          <li><a href="#">Sobre Nosotros</a></li>
-          <li><a href="#">Nuestro Proceso</a></li>
-          <li><a href="#">Contacto</a></li>
+          <li><a href="#nosotros">Sobre Nosotros</a></li>
+          <li><a href="#proceso">Nuestro Proceso</a></li>
+          <li><a href="#contacto">Contacto</a></li>
           <li><a href="https://contachapin.com/web/login">Portal del Cliente (Odoo)</a></li>
         </ul>
       </div>
@@ -372,7 +372,7 @@
     });
     var observer = new IntersectionObserver(function(entries) {
       entries.forEach(function(e) {
-        if (e.isIntersecting) {
+        if (e.isIntersecting) { 
           e.target.style.animation = 'fadeUp .6s ease forwards';
           observer.unobserve(e.target);
         }
