--- a/index.html
+++ b/index.html
@@ -179,13 +179,13 @@
       <div>
         <div class="hero-badge fade-up"><i class="fa fa-award"></i> Contador Certificado</div>
         <h1 class="fade-up d1">Su <span class="accent">patrimonio financiero</span><br>en manos expertas</h1>
-        <p class="hero-sub fade-up d2">Ericson H. Sosa pone mas de 20 anos de experiencia contable a su servicio. Soluciones personalizadas, transparentes y confiables para empresas y personas en Guatemala.</p>
+        <p class="hero-sub fade-up d2">Ericson H. Sosa pone mas de 20 años de experiencia contable a su servicio. Soluciones personalizadas, transparentes y confiables para empresas y personas en Guatemala.</p>
         <div class="hero-actions fade-up d3">
           <a href="" class="btn-primary"><i class="fa fa-paper-plane"></i> Solicitar Consulta</a>
           <a href="" class="btn-outline"><i class="fa fa-list"></i> Ver Servicios</a>
         </div>
         <div class="hero-stats fade-up d4">
-          <div class="hero-stat"><div class="num">20+</div><div class="lbl">Anos de Exp.</div></div>
+          <div class="hero-stat"><div class="num">20+</div><div class="lbl">Años de Exp.</div></div>
           <div class="stat-divider"></div>
           <div class="hero-stat"><div class="num">200+</div><div class="lbl">Clientes</div></div>
           <div class="stat-divider"></div>
