--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
         </div>
         <div>
           <div class="stats-panel">
-            <div class="stat-box"><div class="big">20+</div><div class="caption">Anos de Experiencia</div></div>
+            <div class="stat-box"><div class="big">20+</div><div class="caption">Años de Experiencia</div></div>
             <div class="stat-box"><div class="big">200+</div><div class="caption">Clientes Satisfechos</div></div>
             <div class="stat-divider-h"></div>
             <div class="stat-box"><div class="big">100%</div><div class="caption">Cumplimiento SAT</div></div>
