--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
         <h1 class="fade-up d1">Su <span class="accent">patrimonio financiero</span><br>en manos expertas</h1>
         <p class="hero-sub fade-up d2">Ericson H. Sosa pone mas de 20 años de experiencia contable a su servicio. Soluciones personalizadas, transparentes y confiables para empresas y personas en Guatemala.</p>
         <div class="hero-actions fade-up d3">
-          <a href="" class="btn-primary"><i class="fa fa-paper-plane"></i> Solicitar Consulta</a>
-          <a href="" class="btn-outline"><i class="fa fa-list"></i> Ver Servicios</a>
+          <a href="#contacto" class="btn-primary"><i class="fa fa-paper-plane"></i> Solicitar Consulta</a>
+          <a href="#servicios" class="btn-outline"><i class="fa fa-list"></i> Ver Servicios</a>
         </div>
         <div class="hero-stats fade-up d4">
           <div class="hero-stat"><div class="num">20+</div><div class="lbl">Años de Exp.</div></div>
