--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
             <li><i class="fa fa-phone"></i>+(502) 3520-0000</li>
             <li><i class="fa fa-envelope"></i>info@contachapin.com</li>
           </ul>
-          <a href="" class="card-cta">Agendar Cita Gratuita <i class="fa fa-arrow-right" style="margin-left:6px"></i></a>
+          <a href="#contacto" class="card-cta">Agendar Cita Gratuita <i class="fa fa-arrow-right" style="margin-left:6px"></i></a>
         </div>
       </div>
     </div>
