--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             <li><i class="fa fa-briefcase"></i>+20 años de experiencia</li>
             <li><i class="fa fa-map-marker-alt"></i>Guatemala, Guatemala</li>
             <li><i class="fa fa-phone"></i>+(502) 3520-0000</li>
-            <li><i class="fa fa-envelope"></i><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="640d0a020b24070b0a1005070c05140d0a4a070b09">[email&#160;protected]</a></li>
+            <li><i class="fa fa-envelope"></i><a href="mailto:esosa@contachapin.com" class="__cf_email__" data-cfemail="640d0a020b24070b0a1005070c05140d0a4a070b09">info@contachapin.com</a></li>
           </ul>
           <a href="#contacto" class="card-cta">Agendar Cita Gratuita <i class="fa fa-arrow-right" style="margin-left:6px"></i></a>
         </div>
@@ -277,7 +277,7 @@
       <div class="contact-grid">
         <div class="contact-info-list">
           <div class="contact-item"><div class="contact-icon"><i class="fa fa-phone"></i></div><div><div class="contact-label">Telefono</div><div class="contact-val"><a href="tel:+50235200000">+(502) 3520-0000</a></div></div></div>
-          <div class="contact-item"><div class="contact-icon"><i class="fa fa-envelope"></i></div><div><div class="contact-label">Correo</div><div class="contact-val"><a href="/cdn-cgi/l/email-protection#90f9fef6ffd0f3fffee4f1f3f8f1e0f9febef3fffd"><span class="__cf_email__" data-cfemail="86efe8e0e9c6e5e9e8f2e7e5eee7f6efe8a8e5e9eb">[email&#160;protected]</span></a></div></div></div>
+          <div class="contact-item"><div class="contact-icon"><i class="fa fa-envelope"></i></div><div><div class="contact-label">Correo</div><div class="contact-val"><a href="mailto:esosa@contachapin.com"><span class="__cf_email__" data-cfemail="86efe8e0e9c6e5e9e8f2e7e5eee7f6efe8a8e5e9eb">info@contachapin.com</span></a></div></div></div>
           <div class="contact-item"><div class="contact-icon"><i class="fab fa-whatsapp"></i></div><div><div class="contact-label">WhatsApp</div><div class="contact-val"><a href="https://wa.me/50235200000">+(502) 3520-0000</a></div></div></div>
           <div class="contact-item"><div class="contact-icon"><i class="fa fa-map-marker-alt"></i></div><div><div class="contact-label">Ubicacion</div><div class="contact-val" style="color:rgba(255,255,255,.8)">Guatemala, Guatemala</div></div></div>
           <div class="contact-item"><div class="contact-icon"><i class="fa fa-clock"></i></div><div><div class="contact-label">Horario</div><div class="contact-val" style="color:rgba(255,255,255,.8)">Lun-Vie: 8:00-17:00 hrs</div></div></div>
