--- a/index.html
+++ b/index.html
@@ -348,13 +348,13 @@
           <li><a href="#nosotros">Sobre Nosotros</a></li>
           <li><a href="#proceso">Nuestro Proceso</a></li>
           <li><a href="#contacto">Contacto</a></li>
-          <li><a href="/web/login">Portal del Cliente (Odoo)</a></li>
+          <li><a href="http://144.22.202.231:1469/web/login">Portal del Cliente (Odoo)</a></li>
         </ul>
       </div>
     </div>
     <div class="footer-bottom">
       <p>2025 ContaChapin - Ericson H. Sosa. Todos los derechos reservados.</p>
-      <p>Guatemala - <a href="/web/login">Acceso a Odoo</a></p>
+      <p>Guatemala - <a href="http://144.22.202.231:1469/web/login">Acceso a Odoo</a></p>
     </div>
   </footer>
 
